<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.boomi.connectors</groupId>
	<artifactId>SAP-S4-OData-Connector</artifactId>
	<version>0.0.4-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<connsdk.version>2.11.2</connsdk.version>
		<jackson.version>2.12.4</jackson.version>
	</properties>
	
	<scm>
        <connection>scm:git:file://${env.PWD}/.git</connection>
        <tag>HEAD</tag>
    </scm>
	
	<repositories>
		<repository>
			<id>boomisdk</id>
			<name>Connector SDK Repository</name>
			<url>https://boomisdk.s3.amazonaws.com/releases</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20131018</version>
		</dependency>
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.1.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.olingo</groupId>
			<artifactId>olingo-odata2-core</artifactId>
			<version>2.0.11</version>
		</dependency>
		<dependency>
			<groupId>com.boomi.connsdk</groupId>
			<artifactId>connector-sdk-api</artifactId>
			<version>${connsdk.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.boomi.connsdk</groupId>
			<artifactId>connector-sdk-util</artifactId>
			<version>${connsdk.version}</version>
		</dependency>
		<dependency>
			<groupId>com.boomi.util</groupId>
			<artifactId>boomi-json-util</artifactId>
			<version>1.1.10</version>
		</dependency>
		<dependency>
			<groupId>com.boomi.commonsdk</groupId>
			<artifactId>common-sdk</artifactId>
			<version>1.1.9</version>
		</dependency>
		<dependency>
			<groupId>com.boomi.util</groupId>
			<artifactId>boomi-util</artifactId>
			<version>2.3.12</version>
		</dependency>
		<dependency>
			<groupId>com.boomi.connsdk</groupId>
			<artifactId>connector-sdk-test-util</artifactId>
			<version>${connsdk.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-matchers</artifactId>
			<version>2.6.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.4.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>

				<artifactId>maven-surefire-plugin</artifactId>
				<!-- latest version (2.20.1) does not work well with JUnit5 -->
				<version>2.19.1</version>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.0.3</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>5.0.3</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>src/main/assembly/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>